# f1-racing-ML

./: .gitignore  README.md  pyproject.toml
data/derived/: rain_uplift_2025.parquet
docs/: mvp_plan.md
src/f1ml/: __init__.py  config.py  datasets.py  evaluation.py  fastf1_ingest.py  io.py  rain_uplift.py  standings.py  weather.py
src/f1ml/cli/: __init__.py  features.py  ingest.py  model.py  pipeline.py
src/f1ml/features/: __init__.py  weekend.py
src/f1ml/modeling/: __init__.py  artifacts.py  prediction.py  preprocessing.py  training.py  utils.py
